--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
+    <title>Welcome to House Of Cards</title>
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/navbar.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/leftAndright.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+   <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <nav id="navbar">
+        <img class="logo" src="/images/cards.png" alt="Cards" >
+        <section class="title">House Of Cards</section>
+    </nav>
+
+    <main>
+
+      <p>
+        <span class="playing-card">
+          <span class="card-front" data-suit-idx="0" data-rank-idx="0"></span>
+          <span class="card-back"></span>
+        </span>
+        <span class="playing-card" style='perspective:300px;'>
+          <span class="card-front" data-suit-idx="1" data-rank-idx="0"></span>
+          <span class="card-back" ></span>
+        </span>
+      <span class="playing-card" style='perspective: 300px;'>
+        <span class="card-front" data-suit-idx="2" data-rank-idx="0"></span>
+        <span class="card-back"></span>
+      </span>
+
+      <span class="playing-card" style='perspective: 1000px;'>
+        <span class="card-front" data-suit-idx="3" data-rank-idx="0"></span>
+        <span class="card-back"></span>
+        </span>
+      </p>
+
+      <div class ="left">
+        <section class="userInformation">
+        THIS IS A SECTION WHERE USER INFORMATION WILL GO ON
+        </section>
+        <section class ="whosOnline">
+        THIS IS A SECTION WHERE WHO'S ONLINE WILL GO ON
+        </section>
+      </div>
+      <div class="right">
+        <section class = "Game1">
+          <button type="button" class="Game1">Game 1</button>
+        </section>
+        <section class = "Game2">
+          <button type="button" class="Game2">Game 2</button>
+        </section>
+      </div>
+
+      <section class = "userButtonRow1">
+        <button type="button" class="btn btn-primary">USER 1</button>
+      </section>
+      <section class = "userButtonRow2">
+        <button type="button" class="btn btn-primary">USER 2</button>
+      </section>
+      <section class = "userButtonRow3">
+        <button type="button" class="btn btn-primary">USER 3</button>
+      </section>
+      <section class = "userButtonRow4">
+        <button type="button" class="btn btn-primary">USER 4</button>
+      </section>
+
+    </main>
   </body>
 </html>
