--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-   <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+    <script type='text/javascript'>
+      var socket = io.connect('http://localhost:8080');
+      socket.on('connect', function(data) {
+        socket.emit('join', 'Hello World from client');
+      });
+    </script>
   </head>
 
   <body>
@@ -41,7 +48,6 @@
         <span class="card-back"></span>
         </span>
       </p>
-
       <div class ="left">
         <section class="userInformation">
         THIS IS A SECTION WHERE USER INFORMATION WILL GO ON
