--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-   <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/app.js"></script>
+
   </head>
 
   <body>
@@ -51,10 +52,10 @@
         </section>
       </div>
       <div class="right">
-        <section class = "Game1">
+        <section id = "Game1">
           <button type="button" class="Game1">Game 1</button>
         </section>
-        <section class = "Game2">
+        <section id = "Game2">
           <button type="button" class="Game2">Game 2</button>
         </section>
       </div>
