--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,11 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
-<<<<<<< HEAD
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script type='text/javascript'>
       var socket = io.connect('http://localhost:8080');
+
+      socket.emit('identify', JSON.stringify({user_id: 1, game_id: 2}));    // TODO: hardcoding is both bad, and fucking useless
 
       socket.on('update state', function(data) {
         updateState(data);
