First Temp Socket

--- a/styles/goofspielDesign.scss
+++ b/styles/goofspielDesign.scss
@@ -1,1 +1,8 @@
 
+main {
+  height: 600px;
+  width: fixed;
+  position: fill;
+  background:linear-gradient(135deg, #449144 33%,#008a00 95%);
+  padding:4% 10%;
+}
