--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,11 +48,26 @@
         </span>
       </p>
       <div class ="left">
-        <section class="userInformation">
-        THIS IS A SECTION WHERE USER INFORMATION WILL GO ON
+        <section class="userInformationBase">
+          <section class="UserInfoHeader">
+            Input Username here from the database
+          </section>
+          <section class="userInfoBody">
+            <li> Win = x </li>
+            <li> Loss = x </li>
+            <li> more data as needed </li>
+          </section>
         </section>
-        <section class ="whosOnline">
-        THIS IS A SECTION WHERE WHO'S ONLINE WILL GO ON
+
+        <section class ="whosOnlineBase">
+          <section class = "whosOnlineHeader">
+        Who's Online ( THIS IS TITLE)
+          </section>
+          <section class="whosOlineBody">
+            <li> user List 1 </li>
+            <li> user list 2 </li>
+
+          </section>
         </section>
       </div>
       <div class="right">
@@ -66,15 +81,9 @@
 
       <section class = "userButtonRow1">
         <button type="button" class="btn btn-primary">USER 1</button>
-      </section>
+       </section>
       <section class = "userButtonRow2">
         <button type="button" class="btn btn-primary">USER 2</button>
-      </section>
-      <section class = "userButtonRow3">
-        <button type="button" class="btn btn-primary">USER 3</button>
-      </section>
-      <section class = "userButtonRow4">
-        <button type="button" class="btn btn-primary">USER 4</button>
       </section>
 
     </main>
