--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -164,3 +164,35 @@ body {
   margin-top: 20px;
 }
 
+
+.userInformationBase {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.UserInfoHeader {
+  border: 2px groove;
+  background-color:red;
+}
+
+.userInfoBody {
+  border: 2px groove;
+  background-color:orange;
+}
+
+.whosOnlineBase {
+  border: 2px dotted;
+  background-color: lightblue;
+  height: 100px;
+}
+
+.whosOnlineHeader {
+
+  background:green;
+}
+.whosOlineBody{
+  border: 2px groove;
+  background-color: pink;
+
+}
+
