--- a/views/goofspiel.ejs
+++ b/views/goofspiel.ejs
@@ -17,6 +17,7 @@
 
     var socket = io.connect('http://localhost:8080/');
     var playerNum = Number(/userId=(\d+)/.exec(document.cookie)[1]);
+
     function cardPlay(index) {
       console.log("cardplay.  emitting to server.");
       socket.emit('cardplay', JSON.stringify({
@@ -29,12 +30,69 @@
       var state = JSON.parse(data);
       console.log("server says new state is", state);
 
-      if (playerNum === 1) {
-        renderCardFaces(state.p1Hand);
-      } else {
-        renderCardFaces(state.p2Hand);
+    function countNulls(p1, p2) {
+      let p1cards = 0;
+      let p2cards = 0;
+
+      for(card in p1){
+        if(p1[card] !== null){
+          p1cards++;
+        }
+
+      }
+      for(card in p2){
+        if(p2[card] !== null){
+          p2cards++;
+        }
+      }
+      return p1cards - p2cards;
     }
+      console.log('outside', playerNum);
+      console.log("difference", countNulls(state.p1Hand, state.p2Hand));
+      if (playerNum === 1) {
+        if(countNulls(state.p1Hand, state.p2Hand) >= -1){
+          console.log("p1 cards");
+          renderCardFaces(state.p1Hand);
+        }
+      } else {
+        console.log('inside', playerNum);
+        if(countNulls(state.p1Hand, state.p2Hand) <= 1){
+          console.log("p2 cards");
+        renderCardFaces(state.p2Hand);
+      }
+    }
+
     });
+
+    function shuffleCards(state) {
+      deck = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13];
+      var m = deck.length, t, i;
+
+      // While there remain elements to shuffle…
+      while (m) {
+
+        // Pick a remaining element…
+        i = Math.floor(Math.random() * m--);
+
+        // And swap it with the current element.
+        t = deck[m];
+        deck[m] = deck[i];
+        deck[i] = t;
+      }
+
+      let prizeCard = deck.pop();
+      const nextState = {
+        gameState: 'SHUFFLED',
+        p1Hand: state.p1Hand,
+        p2Hand: state.p2Hand,
+        prizeDeck: deck,
+        prizeCard: prizeCard,
+        p1Score: state.p1Score,
+        p2Score: state.p2Score
+      };
+
+      return nextState;
+    }
 
     function updateState(data) {
       // update ui based on data object
