--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,10 +48,17 @@
         </span>
       </p>
       <div class ="left">
-        <section class="userInformation">
+        <section class="userInformationHead">
+          This is where User Name goes
+        </section>
+        <section class="userInformationBody">
         THIS IS A SECTION WHERE USER INFORMATION WILL GO ON
         </section>
-        <section class ="whosOnline">
+
+        <section class="whosOnlineHead">
+        This is where Title WhosOnline will be
+        </section>
+        <section class ="whosOnlineBody">
         THIS IS A SECTION WHERE WHO'S ONLINE WILL GO ON
         </section>
       </div>
