Turn, Scoreboard, Gameover feature added along with bugfix

--- a/styles/goofspielDesign.scss
+++ b/styles/goofspielDesign.scss
@@ -1,1 +1,16 @@
 
+
+.scoreboard {
+  float: right;
+  border : 30px dotted;
+  height: 120px;
+  width: 250px;
+}
+
+.turnButton {
+  float: left;
+  border: 15px dotted;
+  height: 80px;
+  width: 120px;
+  margin-right: 100%;
+}
