Windows escape button added

--- a/views/goofspiel.ejs
+++ b/views/goofspiel.ejs
@@ -22,7 +22,9 @@
         <section class="title">House Of Cards</section>
     </nav>
     <main>
+      <a href="/" class="btn btn-default">Go to Home </a>
       <div class="turnButton">Make a move</div>
+
       <div class="enemyCards">
         <% for (var i = 0; i < 13; i++) { %>
           <div class="card back"> </div>
