--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 
    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
    <script type="text/javascript" src="/scripts/app.js"></script>
+   <script type="text/javascript" src="/scripts/index.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 
  </head>
@@ -48,14 +49,12 @@
          This is where User Name goes
        </section>
        <section class="userInformationBody">
-       THIS IS A SECTION WHERE USER INFORMATION WILL GO ON
        </section>
 
        <section class="whosOnlineHead">
-       This is where Title WhosOnline will be
+       User Information
        </section>
        <section class ="whosOnlineBody">
-       THIS IS A SECTION WHERE WHO'S ONLINE WILL GO ON
        </section>
      </div>
      <div class="right">
