--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -1,10 +1,10 @@
 
-$base-color: #AD141E;
+$base-color:  #d2d2d2;
 
 
 #navbar {
 
-  background-color: $base-color;
+  background-color: white;
   height:7em;
   border: 2px round black;
 
@@ -14,6 +14,8 @@ $base-color: #AD141E;
   width:10%;
   height:7em;
   float:right;
+  -webkit-animation: anim 10s infinite linear;
+    animation: anim 10s infinite linear;
 }
 
 #navbar .buttonNav {
@@ -23,9 +25,15 @@ float: right;
 
 }
 
-#navbar .title {
 
-  font-size: 60px;
-  color: pink;
-  right-margin: auto;
+
+
+@-webkit-keyframes anim {
+    from {-webkit-transform: rotateY(0deg);}
+    to {-webkit-transform: rotateY(360deg);}
+}
+
+@keyframes anim {
+    from {transform: rotateY(0deg);}
+    to {transform: rotateY(360deg);}
 }
