finished UI for GoofSpeil

--- a/styles/cardlist.scss
+++ b/styles/cardlist.scss
@@ -11,14 +11,14 @@
 
 
 .userCards {
-  margin-top: 300px;
+  margin-top: 250px;
 }
 
 main {
   height: 600px;
   width: fixed;
   position: fill;
-  background:linear-gradient(135deg, #449144 33%,#008a00 95%);
+  background:linear-gradient(135deg, #008080 33%,#00CED1 95%);
   padding:4% 10%;
 }
 .card{
