--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,13 +82,13 @@
        </section>
      </div>
      <div class="user">
-     <section class = "userButtonRow1">
+     <section class = "userButtonRow1 login">
        <form method="POST" action="/login">
          <input type="hidden" value="1" name="userId">
          <button id="btn-user-1" type="submit" class="btn-btn-primary">USER 1</button>
        </form>
      </section>
-     <section class = "userButtonRow2">
+     <section class = "userButtonRow2 login">
        <form method="POST" action="/login">
          <input type="hidden" value="2" name="userId">
          <button id="btn-user-2" type="submit" class="btn-btn-primary">USER 2</button>
