adds generate card

--- a/views/war.ejs
+++ b/views/war.ejs
@@ -50,7 +50,7 @@
       </div>
       <div class="userCards">
         <div class="card back handCardPlayed"> </div>
-        <div class="card h clickable four"></div>
+        <div class="warCardPlayed"></div>
       </div>
     </main>
     <div class="scoreboard">
