fixed come UI issues on main page

--- a/styles/cardlist.scss
+++ b/styles/cardlist.scss
@@ -19,7 +19,7 @@ main {
   width: fixed;
   position: fill;
   background:linear-gradient(135deg, #008080 33%,#00CED1 95%);
-  padding:4% 10%;
+  padding:4% ;
 }
 .card{
   margin:1.5px;
